<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#000000"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/show_title_label"
        android:textColor="#00FF00" />

    <EditText
        android:id="@+id/show_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/show_title_hint"
        android:textColor="#00FF00" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/show_details_label"
        android:textColor="#00FF00" />

    <Button
        android:id="@+id/show_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:textColor="#00FF00"
        app:backgroundTint="#222721" />

    <Button
        android:id="@+id/show_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:textColor="#00FF00"
        app:backgroundTint="#222721"/>

    <CheckBox
        android:id="@+id/show_watched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/show_watched_label"
        android:textColor="#00FF00"
        app:buttonTint="#00FF00" />

    <CheckBox
        android:id="@+id/show_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/show_recommend_label"
        android:textColor="#00FF00"
        app:buttonTint="#00FF00" />

</LinearLayout>